<resources>
    <string name="app_name">MaRéu</string>
    <string name="app_name_filter">MaRéu - </string>

    <string name="toast_noMeetingScheduledForThisDate">"Aucune réunion de prévue à cette date"</string>
    <string name="toast_noMeetingScheduledInThisRoom">"Aucune réunion de prévue dans cette salle"</string>
    <string name="toast_pleaseNameTheSubjectOfMeeting">"Veuillez SVP nommer le sujet de votre réunion"</string>
    <string name="toast_pleaseDefineDateOfMeeting">"Veuillez SVP définir une date"</string>
    <string name="toast_pleaseDefineStartTime">"Veuillez SVP définir l\'heure de début"</string>
    <string name="toast_pleaseDefineEndTime">"Veuillez SVP définir l\'heure de fin"</string>
    <string name="toast_pleaseDefineAtLeastTwoParticipants">"Veuillez SVP définir au minimum deux participants "</string>
    <string name="toast_pleaseDefineTheNameOfParticipant">"Le nom du participants n\'a pas été indiqué"</string>
    <string name="toast_theParticipantsIsAlreadyExistInThisMeeting">"Le participants existe déja dans cette réunion"</string>
    <string name="toast_onlyEmailsAccept">"Seul des emails sont acceptés"</string>
    <string name="toast_thisRoomIsAlreadyReserved">"Cette salle est déjà réservée"</string>
    <string name="toast_pleaseCheckStartAndEndTimes">"Veuillez vérifier les heures de début et de fin"</string>
    <string name="name_ofRoomPeach">"Peach"</string>
    <string name="name_ofRoomMario">"Mario"</string>
    <string name="name_ofRoomLuigi">"Luigi"</string>
    <string name="name_ofRoomToad">"Toad"</string>
    <string name="name_ofRoomBowser">"Bowser"</string>
    <string name="name_ofRoomYoshi">"Yoshi"</string>
    <string name="name_ofRoomWario">"Wario"</string>
    <string name="name_ofRoomDaisy">"Daisy"</string>
    <string name="name_ofRoomHarmonie">"Harmonie"</string>
    <string name="name_ofRoomPokey">"Pokey"</string>
    <string name="toast_pleaseSelectOtherFilter">"La liste filtrée est vide veuillez selectionner un autre filtre  </string>
    <string name="textView_beforeId">"Réunion "</string>
    <string name="textView_beforeDetailId">"Numéro : "</string>
    <string name="textView_beforeDetailSubject">"A propos de : "</string>
    <string name="textView_beforeDetailDate">"Date : "</string>
    <string name="textView_beforeDetailRoom">"Salle : "</string>
    <string name="textView_beforeDetailHourBegin">"Début : "</string>
    <string name="textView_beforeDetailHourEnd">"Fin : "</string>
    <string name="textView_beforeRoomMeet">"Salle "</string>
    <string name="comma">,</string>
    <string name="slash">/</string>
    <string name="beforeDashAndBracket">-(</string>
    <string name="endDashAndBracket">)-</string>
    <string name="string_Empty" />
    <string name="menu_selectDate">Sélectionner date</string>
    <string name="menu_selectRoomMeeting">Sélectionner salle</string>
    <string name="menu_wordFilter">Filtrer</string>
    <string name="menu_allMeetings">Toutes les réunions</string>
    <string name="editText_subjectMeeting">Le sujet de la réunion</string>
    <string name="button_timeBegin">heure de debut</string>
    <string name="button_timeEnd">heure de fin</string>
    <string name="button_selectDate">Selectionner la date</string>
    <string name="textView_selectRoomMeeting">Indiquer la salle</string>
    <string name="editText_selectEmail">Indiquer l\'email d\'un participant</string>
    <string name="button_addEmail">Ajouter l\'email</string>
    <string name="button_save">Sauvegarder</string>

    <string-array name="array_RoomMeetings">
        <item>Pokey</item>
        <item>Daisy</item>
        <item>Donkey Kong</item>
        <item>Harmonie</item>
        <item>Luigi</item>
        <item>Mario</item>
        <item>Peach</item>
        <item>Toad</item>
        <item>Wario</item>
        <item>Yoshi</item>
    </string-array>
</resources>